--- a/training/03_explore_eml.Rmd
+++ b/training/03_explore_eml.Rmd
@@ -1,8 +1,8 @@
 # Explore EML
 
-We use the Ecological Metadata Language (EML) to store structured metadata for all datasets submitted to the Arctic Data Center. EML is written in XML (extensible markup language) and functions for building and editing EML are in the [EML R package](https://github.com/ropensci/EML).
+We use the Ecological Metadata Language (EML) to store structured metadata for all datasets submitted to the Arctic Data Center. EML is written in XML (extensible markup language) and functions for building and editing EML are in the <a href = 'https://github.com/ropensci/EML' target='_blank'>EML R package</a>.
 
-For additional background on EML and principles for metadata creation, check out [this paper](data/eml-principles.pdf).
+For additional background on EML and principles for metadata creation, check out <a href = 'data/eml-principles.pdf' target='_blank'>this paper</a>.
 
 ```{r, child = '../workflows/explore_eml/navigate_through_eml.Rmd'}
 ```
