--- a/training/04_edit_eml_in_R.Rmd
+++ b/training/04_edit_eml_in_R.Rmd
@@ -1,6 +1,6 @@
 # Edit EML in R
 
-This chapter is a practical tutorial for using R to read, edit, write, and validate EML documents. Much of the information here can also be found in the vignettes for the R packages used in this section (e.g. the [EML package](https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd)).
+This chapter is a practical tutorial for using R to read, edit, write, and validate EML documents. Much of the information here can also be found in the vignettes for the R packages used in this section (e.g. the <a href = 'https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd' target='_blank'>EML package</a>).
 
 ```{r, child = '../workflows/edit_data_packages/get_package_and_eml.Rmd'}
 ```
@@ -77,7 +77,7 @@ pkg <- get_package(mn, resource_map_pid)
 set_rights_and_access(mn, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
 ```
 
-Finally, go through the [SASAP checklist](https://github.nceas.ucsb.edu/NCEAS/sasap-data/blob/master/data-submission/checklist.Rmd) to ensure that the package meets all of the project-specific requirements for publishing.
+Finally, go through the <a href = 'https://github.nceas.ucsb.edu/NCEAS/sasap-data/blob/master/data-submission/checklist.Rmd' target='_blank'>SASAP checklist</a> to ensure that the package meets all of the project-specific requirements for publishing.
 
 After your package is published, run the `qa_package()` function from the `datamgmt` package. 
 
@@ -108,5 +108,5 @@ qa_package(mn, resource_map_pid)
 * Make sure your package from [before](#exercise-2) is loaded into R.
 * Replace the existing `dataTable` with a new `dataTable` object with an `attributelist` and `physical` section you write in R using the above commands.
 * Then write, validate, and update your package.
-* Use the [checklist](https://nceas.github.io/datateam-training/reference/final-checklist-before-notifying-submitter-pi.html) to review your submission.
+* Use the <a href = 'https://nceas.github.io/datateam-training/reference/final-checklist-before-notifying-submitter-pi.html' target='_blank'>checklist</a> to review your submission.
 * Make edits where necessary, and publish updates as needed.
