--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -25,18 +25,18 @@ favicon: "favicon.ico"
 
 ## Account information {-}
 
-* [LDAP - NCEAS](https://identity.nceas.ucsb.edu/identity/cgi-bin/ldapweb.cgi?cfg=account) - this should be set up prior to your start date in order to help get other accounts set. This account and password control your access to:
-    + arcticdata [RT queue](https://support.nceas.ucsb.edu/rt/)
-    + GitHub Enterprise - [arctic-data](https://github.nceas.ucsb.edu/KNB/arctic-data/) and [sasap-data](https://github.nceas.ucsb.edu/NCEAS/sasap-data/)
+* <a href = 'https://identity.nceas.ucsb.edu/identity/cgi-bin/ldapweb.cgi?cfg=account' target='_blank'>LDAP-NCEAS</a> - this should be set up prior to your start date in order to help get other accounts set. This account and password control your access to:
+    + arcticdata <a href = 'https://support.nceas.ucsb.edu/rt/' target='_blank'>RT queue</a>
+    + GitHub Enterprise - <a href = 'https://github.nceas.ucsb.edu/KNB/arctic-data/' target='_blank'>arctic-data</a>
 * Datateam server - follow instructions in email from Nick at NCEAS to reset your datateam password in the terminal
-* [ORCiD](https://orcid.org/register) - create an account
-* [NCEAS Slack](http://nceas.slack.com) - get an invite from [slack.nceas.ucsb.edu](http://slack.nceas.ucsb.edu)
+* <a href = 'https://orcid.org/register' target='_blank'>ORCid</a> - create an account
+* <a href = 'http://nceas.slack.com' target='_blank'>NCEAS Slack</a> - get an invite from <a href = 'http://slack.nceas.ucsb.edu' target='_blank'>slack.nceas.ucsb.edu</a>
     + Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam, #sasap, #social
 * Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Dom or Jesse in Slack
-* GitHub - if you do not have a public GitHub account already, please register for one [here](https://github.com/join?source=header-home)
-* [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118) - fill out anticipated quarterly schedule. Note there are separate tabs for each week AND a general schedule tab for the quarter.
-* [Electronic Timekeeping](https://timekeeping.ucsb.edu/) - make sure you can log on to electronic timekeeping 
-via your UCSBNetID and password.  Log your hours for you first day! Under today's date select 'Hours Worked' under the Pay Code column, enter the amount of hours under the Amount column, and finally click the 'Save' button in the top right. At the end of every two-week pay period you will also need to click the 'Approve Timecard' button in order to submit your timecard.  [Detailed instructions](https://timekeeping.ucsb.edu/sites/default/files/employee_hours_worked_0.pdf)
+* GitHub - if you do not have a public GitHub account already, please register for one <a href = 'https://github.com/join?source=header-home' target='_blank'>here</a>
+* <a href = 'https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118' target='_blank'>Schedule</a> - fill out anticipated quarterly schedule. Note there are separate tabs for each week AND a general schedule tab for the quarter.
+* <a href = 'https://timekeeping.ucsb.edu/' target='_blank'>Electronic Timekeeping</a> - make sure you can log on to electronic timekeeping 
+via your UCSBNetID and password.  Log your hours for you first day! Under today's date select 'Hours Worked' under the Pay Code column, enter the amount of hours under the Amount column, and finally click the 'Save' button in the top right. At the end of every two-week pay period you will also need to click the 'Approve Timecard' button in order to submit your timecard.  <a href = 'https://timekeeping.ucsb.edu/sites/default/files/employee_hours_worked_0.pdf' target='_blank'>Detailed instructions</a>
 
 
 ## NCEAS Events {-}
